...
                        <connections>
                            <outlet property="dataSource" destination="g4j-ur-ee9" id="uVG-th-y8d"/>
                            <outlet property="delegate" destination="g4j-ur-ee9" id="rC6-TJ-33G"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Event Search" id="4Je-X6-Mmk">
                        <barButtonItem key="backBarButtonItem" title="Back" id="RM0-2R-KLz"/>
                    </navigationItem>
                    <connections>
                        <outlet property="searchBar" destination="5Tp-Nh-RFO" id="vdA-Al-5d0"/>
                        <outlet property="searchDisplayController" destination="Zbc-Fe-Tgm" id="wuc-41-3R5"/>
                        <segue destination="UE0-77-uoY" kind="showDetail" identifier="ShowEventDetails" id="Lgw-X8-Yys"/>
                    </connections>
...
